# 75.42_taller_de_programacion_I

./: README.md
finales/: .gitignore  README.md
finales/03_07_2018/01/: main.c
finales/03_07_2018/02/: main.c
finales/03_07_2018/03/: a  main.c
finales/03_07_2018/04/: main.cpp
finales/figuras_geometricas/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
finales/variable_global/: algo.h  main.c
taller_tp1/: 02_4args  06_6args  bytecodes.h  client.h  java_virtual_machine.c  java_virtual_machine.h  server.c  socket.c  socket.h
tp1/: .gitignore  04_6args  05_6args  README.md  client.c  main.c  node.c  node.h  server.h  stack.c  stack.h
tp2/: .gitignore
tp2/src/: cache.h  cache_direct.cpp  cache_direct.h  cache_fa_fifo.cpp  cache_fa_fifo.h  cache_fa_lru.cpp  cache_fa_lru.h  cerr_protected.h  cout_protected.h  cpu.cpp  cpu.h  deque.cpp  deque.h  input.cpp  input.h  lock.h  main.cpp  read_and_process_addresses.cpp  read_and_process_addresses.h  thread.cpp  thread.h
tp3/: .gitignore  README.md
tp3/src/: client_main.cpp  common_constants.h  common_input.cpp  common_input.h  common_lock.h  common_matrix.cpp  common_matrix.h  common_socket.cpp  common_socket.h  common_thread.cpp  common_thread.h  server_acceptor.cpp  server_acceptor.h  server_funcion.cpp  server_funcion.h  server_funciones.cpp  server_funciones.h  server_main.cpp  server_pelicula.cpp  server_pelicula.h  server_peliculas.cpp  server_peliculas.h  server_requests_handler.cpp  server_requests_handler.h  server_sala.cpp  server_sala.h  server_salas.cpp  server_salas.h
(+122 files in other folders)
